--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -58,6 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="@dimen/fab_margin"
+        app:backgroundTint="@color/nursingPrimary"
         android:src="@drawable/search_icon"
         app:layout_anchor="@id/toolbar"
         app:layout_anchorGravity="bottom|right|end" />
