--- a/app/src/main/res/layout/activity_start_nursing.xml
+++ b/app/src/main/res/layout/activity_start_nursing.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/nursingPrimary">
 
 
     <FrameLayout
@@ -13,6 +13,7 @@
 
 
     </FrameLayout>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/nursing_next_fab"
         android:layout_width="wrap_content"
