--- a/app/src/main/res/layout/fragment_nursing_adduser.xml
+++ b/app/src/main/res/layout/fragment_nursing_adduser.xml
@@ -1,18 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/nursingPrimary">
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+    android:background="@null">
 
-        <android.support.v7.widget.AppCompatEditText
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@null"
+        android:orientation="vertical">
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/nursing_adduser_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="name"/>
-    </android.support.design.widget.TextInputLayout>
+            android:layout_margin="10dp">
 
-</RelativeLayout>
+            <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/edit_adduser_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Name"
+                android:inputType="text" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/nursing_adduser_age"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
+
+            <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/edit_adduser_age"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Age (in full)"
+                android:inputType="numberSigned" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/nursing_adduser_height"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
+
+            <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/edit_adduser_height"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Height (Metric)"
+                android:inputType="numberSigned" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/nursing_adduser_weight"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
+
+            <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/edit_adduser_weight"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Weight (Kg)"
+                android:inputType="numberSigned" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/nursing_adduser_step"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
+
+            <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/edit_adduser_step"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Step Stride (Centimeter)"
+                android:inputType="number" />
+        </android.support.design.widget.TextInputLayout>
+
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_margin="20dp"
+            android:divider="@color/colorAccent"
+            android:id="@+id/gender_group">
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Man"
+                android:checked="true"
+                android:id="@+id/radio_man"
+                android:layout_weight="1" />
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="woman"
+                android:id="@+id/radio_woman"
+                android:layout_weight="1" />
+        </RadioGroup>
+
+    </LinearLayout>
+</ScrollView>
