--- a/app/src/main/res/layout/activity_nursing_main.xml
+++ b/app/src/main/res/layout/activity_nursing_main.xml
@@ -20,13 +20,37 @@
             android:fitsSystemWindows="true"
             android:theme="@style/AppTheme.AppBarOverlay">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/nursing_toolbar"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:layout_scrollFlags="scroll|enterAlways"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+                android:layout_height="wrap_content">
+
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/nursing_toolbar"
+                    android:layout_width="240dp"
+                    android:layout_height="?attr/actionBarSize"
+                    android:layout_weight="1.68"
+                    android:background="?attr/colorPrimary"
+                    app:layout_scrollFlags="scroll|enterAlways"
+                    app:popupTheme="@style/AppTheme.PopupOverlay" />
+                <TextView
+                    android:id="@+id/nursing_toolbar_rssi"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="rssi"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_margin="5dp" />
+                <ImageView
+                    android:id="@+id/nursing_toolbar_bluetoothFlag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="10dp" />
+
+
+            </LinearLayout>
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/nursing_tabs"
