--- a/app/src/main/res/layout/fragmnet_nursing_dashboard.xml
+++ b/app/src/main/res/layout/fragmnet_nursing_dashboard.xml
@@ -2,7 +2,8 @@
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@null">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -10,25 +11,170 @@
         android:background="@null"
         android:orientation="vertical">
 
+        <com.rainbow.kam.bt_scanner.Tools.Design.RippleView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:background="@null"
+            app:rv_zoom="true">
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@null"
+                app:cardCornerRadius="2dp"
+                app:cardElevation="7dp"
+                app:cardPreventCornerOverlap="false"
+                app:contentPadding="0dp">
+
+
+                <TextView
+                    android:id="@+id/deviceTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="10dp"
+                    android:background="@null"
+                    android:text="Device Time" />
+
+                <com.rainbow.kam.bt_scanner.Tools.Design.CircleButton
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="center_vertical|end"
+                    android:background="@null"
+                    android:src="@drawable/ic_link"
+                    app:cb_color="#148cff"
+                    app:cb_pressedRingWidth="8dip" />
+            </android.support.v7.widget.CardView>
+        </com.rainbow.kam.bt_scanner.Tools.Design.RippleView>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:background="@null"
+            android:orientation="horizontal">
 
+            <com.rainbow.kam.bt_scanner.Tools.Design.RippleView
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:background="@null"
+                app:rv_zoom="true">
 
-            <TextView
-                android:id="@+id/deviceTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="New Text" />
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    app:cardCornerRadius="2dp"
+                    app:cardElevation="7dp"
+                    app:cardPreventCornerOverlap="false"
+                    app:contentPadding="0dp">
 
-            <TextView
-                android:id="@+id/deviceData"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="New Text" />
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@null">
+
+                        <com.rainbow.kam.bt_scanner.Tools.Design.CircleButton
+                            android:layout_width="64dip"
+                            android:layout_height="64dip"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            android:background="@null"
+                            android:src="@drawable/ic_directions_walk_white_36dp"
+                            app:cb_color="#00d7ff"
+                            app:cb_pressedRingWidth="8dip" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentTop="true"
+                            android:layout_centerHorizontal="true"
+                            android:layout_margin="10dp"
+                            android:background="@null"
+                            android:text="STEP"
+                            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                        <TextView
+                            android:id="@+id/dashboard_step"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentBottom="true"
+                            android:layout_centerHorizontal="true"
+                            android:layout_margin="20dp"
+                            android:background="@null"
+                            android:textAppearance="?android:attr/textAppearanceLarge" />
+                    </RelativeLayout>
+                </android.support.v7.widget.CardView>
+            </com.rainbow.kam.bt_scanner.Tools.Design.RippleView>
+
+            <com.rainbow.kam.bt_scanner.Tools.Design.RippleView
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:background="@null"
+                app:rv_zoom="true">
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    app:cardCornerRadius="2dp"
+                    app:cardElevation="7dp"
+                    app:cardPreventCornerOverlap="false"
+                    app:contentPadding="0dp">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@null">
+
+                        <com.rainbow.kam.bt_scanner.Tools.Design.CircleButton
+                            android:layout_width="64dip"
+                            android:layout_height="64dip"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            android:background="@null"
+                            android:src="@drawable/ic_link"
+                            app:cb_color="#ff5675"
+                            app:cb_pressedRingWidth="8dip" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentTop="true"
+                            android:layout_centerHorizontal="true"
+                            android:layout_margin="10dp"
+                            android:background="@null"
+                            android:text="CALORIE"
+                            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                        <TextView
+                            android:id="@+id/dashboard_calorie"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentBottom="true"
+                            android:layout_centerHorizontal="true"
+                            android:layout_margin="20dp"
+                            android:background="@null"
+                            android:textAppearance="?android:attr/textAppearanceLarge" />
+                    </RelativeLayout>
+                </android.support.v7.widget.CardView>
+            </com.rainbow.kam.bt_scanner.Tools.Design.RippleView>
         </LinearLayout>
 
         <LinearLayout
@@ -38,119 +184,119 @@
             android:layout_weight="1"
             android:orientation="horizontal">
 
-
-            <android.support.v7.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+            <com.rainbow.kam.bt_scanner.Tools.Design.RippleView
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
                 android:layout_gravity="center_vertical"
                 android:layout_margin="15dp"
                 android:layout_weight="1"
-                app:cardCornerRadius="2dp"
-                app:cardElevation="7dp"
-                app:cardPreventCornerOverlap="false"
-                app:contentPadding="0dp">
+                android:background="@null"
+                app:rv_zoom="true">
 
-                <RelativeLayout
+                <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1">
+                    android:background="@null"
+                    app:cardCornerRadius="2dp"
+                    app:cardElevation="7dp"
+                    app:cardPreventCornerOverlap="false"
+                    app:contentPadding="0dp">
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/ic_link" />
-                </RelativeLayout>
-            </android.support.v7.widget.CardView>
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@null">
 
-            <android.support.v7.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                        <com.rainbow.kam.bt_scanner.Tools.Design.CircleButton
+                            android:layout_width="64dip"
+                            android:layout_height="64dip"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            android:background="@null"
+                            android:src="@drawable/ic_link"
+                            app:cb_color="#b2fa5c"
+                            app:cb_pressedRingWidth="8dip" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentTop="true"
+                            android:layout_centerHorizontal="true"
+                            android:layout_margin="10dp"
+                            android:background="@null"
+                            android:text="DISTANCE"
+                            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                        <TextView
+                            android:id="@+id/dashboard_distance"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentBottom="true"
+                            android:layout_centerHorizontal="true"
+                            android:layout_margin="20dp"
+                            android:background="@null"
+                            android:textAppearance="?android:attr/textAppearanceLarge" />
+                    </RelativeLayout>
+                </android.support.v7.widget.CardView>
+            </com.rainbow.kam.bt_scanner.Tools.Design.RippleView>
+
+            <com.rainbow.kam.bt_scanner.Tools.Design.RippleView
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
                 android:layout_gravity="center_vertical"
                 android:layout_margin="15dp"
                 android:layout_weight="1"
-                app:cardCornerRadius="2dp"
-                app:cardElevation="7dp"
-                app:cardPreventCornerOverlap="false"
-                app:contentPadding="0dp">
+                android:background="@null"
+                app:rv_zoom="true">
 
-                <RelativeLayout
+                <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1">
+                    android:background="@null"
+                    app:cardCornerRadius="2dp"
+                    app:cardElevation="7dp"
+                    app:cardPreventCornerOverlap="false"
+                    app:contentPadding="0dp">
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@null">
 
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/ic_link" />
-                </RelativeLayout>
-            </android.support.v7.widget.CardView>
+                        <com.rainbow.kam.bt_scanner.Tools.Design.CircleButton
+                            android:layout_width="64dip"
+                            android:layout_height="64dip"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            android:background="@null"
+                            android:src="@drawable/ic_link"
+                            app:cb_color="#fff650"
+                            app:cb_pressedRingWidth="8dip" />
 
-        </LinearLayout>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentTop="true"
+                            android:layout_centerHorizontal="true"
+                            android:layout_margin="10dp"
+                            android:background="@null"
+                            android:text="ETC"
+                            android:textAppearance="?android:attr/textAppearanceMedium" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-
-            <android.support.v7.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="15dp"
-                android:layout_weight="1"
-                app:cardCornerRadius="2dp"
-                app:cardElevation="7dp"
-                app:cardPreventCornerOverlap="false"
-                app:contentPadding="0dp">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/ic_link" />
-                </RelativeLayout>
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="15dp"
-                android:layout_weight="1"
-                app:cardCornerRadius="2dp"
-                app:cardElevation="7dp"
-                app:cardPreventCornerOverlap="false"
-                app:contentPadding="0dp">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/ic_link" />
-                </RelativeLayout>
-            </android.support.v7.widget.CardView>
-
+                        <TextView
+                            android:id="@+id/dashboard_etc"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentBottom="true"
+                            android:layout_centerHorizontal="true"
+                            android:layout_margin="20dp"
+                            android:background="@null"
+                            android:textAppearance="?android:attr/textAppearanceLarge" />
+                    </RelativeLayout>
+                </android.support.v7.widget.CardView>
+            </com.rainbow.kam.bt_scanner.Tools.Design.RippleView>
         </LinearLayout>
 
     </LinearLayout>
