--- a/app/src/main/res/layout/main_bluetooth_device_item.xml
+++ b/app/src/main/res/layout/main_bluetooth_device_item.xml
@@ -35,7 +35,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Name : " />
+                    android:text="Name : "
+                    android:textColor="#4169e1" />
 
                 <TextView
                     android:id="@+id/item_name"
@@ -43,7 +44,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Medium Text"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="#4169e1" />
             </LinearLayout>
 
 
@@ -56,7 +58,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Address : " />
+                    android:text="Address : "
+                    android:textColor="#dc143c" />
 
                 <TextView
                     android:id="@+id/item_address"
@@ -64,7 +67,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Small Text"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="#dc143c" />
 
             </LinearLayout>
 
